--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+        integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -34,7 +37,7 @@
 <div class="md:flex justify-between py-20 px-10 bg-indigo-500 text-indigo-100">
 
     <!-- left -->
-    <div class="md:w-1/2 mb-10 md:mb-0">
+    <div class="md:w-1/2 mb-10 md:mb-0" data-aos="zoom-in-right">
         <h2 class=" md:text-4xl lg:text-6xl text-white mb-6">Welcome to the City!</h2>
         <p class="mb-6">There is never a sad day in the city</p>
 
@@ -45,7 +48,7 @@
             Started</a>
     </div>
     <!-- right -->
-    <div class="md:w-1/2">
+    <div class="md:w-1/2" data-aos="zoom-in">
         <img src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1113&q=800"
             alt="Chicago" class="w-full rounded shadow-2xl">
     </div>
@@ -54,22 +57,22 @@
 
 <!--features================== -->
 <div class="md:flex py-16 px-10 bg-indigo-800 text-indigo-200 text-center">
-    <div class="mr-2 text-center">
+    <div class="mr-2 text-center" data-aos="flip-up">
         <img src="https://images.unsplash.com/photo-1514565131-fce0801e5785?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2l0eXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60"
             class="w-full  mb-4 rounded border-solid border-2 border-indigo-400">
         <p>City1</p>
     </div>
-    <div class="mr-2  mt-8 text-center">
+    <div class="mr-2  mt-8 text-center" data-aos="flip-down">
         <img src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1113&q=80"
             class="w-full mb-4 rounded border-solid border-2 border-indigo-400">
         <p>City2</p>
     </div>
-    <div class="mr-2 text-center">
+    <div class="mr-2 text-center" data-aos="flip-up">
         <img src="https://images.unsplash.com/photo-1465447142348-e9952c393450?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTh8fGNpdHl8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60"
             class="w-full mb-4 rounded border-solid border-2 border-indigo-400">
         <p>City3</p>
     </div>
-    <div class="mr-2 mt-8 text-center">
+    <div class="mr-2 mt-8 text-center" data-aos="flip-down">
         <img src="https://images.unsplash.com/photo-1523731407965-2430cd12f5e4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
             class="w-full mb-4 rounded border-solid border-2 border-indigo-400">
         <p>City4</p>
@@ -96,4 +99,14 @@
     <div class="flex items-center">
         Copyright &copy; City 2020 - Infinity
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+        integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+        crossorigin="anonymous"></script>
+    <script>
+        AOS.init({
+            delay: 200,
+            duration: 1200,
+            once: false
+        })
+    </script>
 </div>
